# EventBuilder_PC

./: .gitignore  CMakeLists.txt  README.md  input.txt  input_Aug22_runs21plus.txt  input_PCTest.txt  makefile  premake5.lua
etc/: 18Neap_list.txt  ANASENPlotEdit.C  ANASENPlotEditPC.C  ANASEN_18Neap_ChannelMap.txt  ANASEN_PC_spaced.txt  ANASEN_PC_test.txt  ANASEN_TRIUMFAug22_ChannelMap.txt  ANASEN_TRIUMFAug_run21+_ChannelMap.txt  ANASEN_TRIUMFAug_run7-20_ChannelMap.txt  BasicPlotPoint.C  Calibration.cpp  Fangorn.C  Fangorn.h  PhiPhi.C  PruneTree.C  Reconstruct.C  Reconstruct.h  SX3.C  SX3Fronts.cpp  SX3_backs.txt  ScalerFile_Aug2022_ANASEN.txt  ScalerFile_Feb2021_SABRE.txt  TRIUMF_run21+_list.txt  TimePeak.C  TimePeakPC.C  histogrammer.cpp  processAllRuns.sh  processOneRun.sh
include/: CompassFile.h  CompassHit.h  CompassRun.h  DataStructs.h  EVBMainFrame.h  GWMEventBuilder.h  LinkDef_evb.h  SlowSort.h
src/: CMakeLists.txt  EventBuilder.h  gui_main.cpp  main.cpp
src/evb/: CMakeLists.txt  ChannelMap.cpp  ChannelMap.h  CompassFile.cpp  CompassFile.h  CompassHit.h  CompassRun.cpp  CompassRun.h  EVBApp.cpp  EVBApp.h  EVBParameters.h  EVBWorkspace.cpp  EVBWorkspace.h  FlagHandler.cpp  FlagHandler.h  GWMEventBuilder.cpp  OrderChecker.cpp  OrderChecker.h  ShiftMap.cpp  ShiftMap.h  SlowSort.cpp  SlowSort.h  Stopwatch.cpp  Stopwatch.h
src/evbdict/: CMakeLists.txt  DataStructs.cpp  DataStructs.h  LinkDef_evb.h  module.modulemap
src/gui/: EVBMainFrame.cpp  FileViewFrame.cpp
src/guidict/: CMakeLists.txt  EVBMainFrame.cpp  EVBMainFrame.h  FileViewFrame.cpp  module.modulemap
src/peek/: CMakeLists.txt  main.cpp
